# app-thingy

./: .gitignore  Cargo.toml  makerun.sh
client/: index.html  package.json  style.css  test.ts  tsconfig.json  webpack.config.js
src/: main.rs
