[package]
name = "server_test"
version = "0.1.0"
authors = ["Ben Findley <ben.g.findley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
